# polka-storage

./: .dockerignore  .envrc  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  DEVELOPMENT.md  Justfile  LICENSE  PARACHAIN.md  PROVIDER.md  README.md  deal  flake.nix  install-deps.sh  pnpm-lock.yaml  rust-toolchain.toml
cli/polka-storage-provider/: Cargo.toml  README.md
cli/polka-storage-provider/artifacts/: metadata.scale
cli/polka-storage-provider/client/: Cargo.toml
cli/polka-storage-provider/client/src/: main.rs  rpc_client.rs
cli/polka-storage-provider/common/: Cargo.toml
cli/polka-storage-provider/common/src/: commp.rs  lib.rs
cli/polka-storage-provider/server/: Cargo.toml
cli/polka-storage-provider/server/src/: db.rs  main.rs  pipeline.rs  rpc.rs  sealer.rs  storage.rs
cli/polka-storage-provider/src/: cli.rs  commands.rs  commp.rs  db.rs  error.rs  main.rs  polkadot.rs  rpc.rs  storage.rs  substrate.rs
cli/polka-storage-provider/src/commands/: deal.rs  info.rs  init.rs  mod.rs  run.rs  run_rpc_cmd.rs  runner.rs  stop_rpc_cmd.rs  storage.rs  utils.rs  wallet.rs  wallet_cmd.rs
cli/polka-storage-provider/src/rpc/: client.rs  error.rs  methods.rs  mod.rs  reflect.rs  server.rs  version.rs
cli/proof-generator/: Cargo.toml
cli/proof-generator/src/: main-post-trail.rs  main.rs  pallet.rs
lib/peer-resolver/: Cargo.toml  README.md
lib/peer-resolver/examples/: bootstrap.rs  discovery.rs  identify.rs  register.rs
lib/peer-resolver/src/: bootstrap.rs  client.rs  discover.rs  discovery.rs  error.rs  lib.rs  register.rs
lib/polka-storage-proofs/: Cargo.toml
lib/polka-storage-proofs/src/: groth16.rs  lib.rs  types.rs  zero_reader.rs
lib/polka-storage-proofs/src/filecoin/: mod.rs  types.rs
lib/polka-storage-proofs/src/groth16/: mod.rs  std.rs  substrate.rs
lib/polka-storage-proofs/src/padding/: mod.rs
lib/polka-storage-proofs/src/porep/: mod.rs  sealer.rs
lib/polka-storage-proofs/src/post/: mod.rs
libs/polka-storage-proofs/: Cargo.toml
libs/polka-storage-proofs/src/: lib.rs
libs/proof-utilities/: Cargo.toml
libs/proof-utilities/examples/: porep.rs  window_post.rs
libs/proof-utilities/src/: lib.rs  pallet.rs  porep.rs  utils.rs
maat/: Cargo.toml  README.md  generate_porep_proof.sh
maat/src/: lib.rs
maat/tests/: real_world.rs
mater/lib/: Cargo.toml
mater/lib/benches/: benchmark.rs
mater/lib/src/: lib.rs  multicodec.rs
mater/lib/src/stores/: blockstore.rs  filestore.rs  mod.rs
mater/lib/src/unixfs/: unixfs.proto  unixfs_pb.rs
mater/lib/src/v1/: reader.rs
mater/lib/src/v2/: writer.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/collator-power/: Cargo.toml  DESIGN.md  README.md
pallets/collator-power/src/: lib.rs
pallets/common/: Cargo.toml
pallets/common/src/: address.rs  lib.rs  registered_proof.rs
pallets/common/src/address/: payload.rs
pallets/faucet/: Cargo.toml
pallets/faucet/src/: lib.rs  mock.rs  test.rs
pallets/market/: Cargo.toml  DESIGN.md  README.md
pallets/market/src/: commd.rs  error.rs  lib.rs  mock.rs  test.rs
pallets/market/src/commd/: mod.rs  zero.rs
pallets/proofs/: Cargo.toml
pallets/proofs/src/: lib.rs  mock.rs  tests.rs
pallets/proofs/src/crypto/: feistel.rs  groth16.rs  mod.rs
pallets/proofs/src/fr32/: mod.rs
pallets/proofs/src/graphs/: bucket.rs  mod.rs  stacked.rs
pallets/proofs/src/porep/: config.rs  mod.rs
pallets/proofs/src/post/: config.rs  mod.rs
pallets/proofs/src/tests/: mod.rs  porep.rs  post.rs
pallets/storage-provider/: API.md  Cargo.toml  DESIGN.md  PROOF-OF-STORAGE.md  README.md
pallets/storage-provider/src/: benchmarks.rs  deadline.rs  error.rs  expiration_queue.rs  fault.rs  lib.rs  mock.rs  partition.rs  proofs.rs  randomness.rs  sector.rs  sector_map.rs  storage_provider.rs  test.rs  types.rs  utils.rs
pallets/storage-provider/src/deadline/: assignment.rs
pallets/storage-provider/src/tests/: deadline.rs  declare_faults.rs  declare_faults_recovered.rs  expiration_queue.rs  mod.rs  post_hook.rs  pre_commit_sector.rs  pre_commit_sector_batch.rs  pre_commit_sector_hook.rs  pre_commit_sectors.rs  prove_commit_sector.rs  prove_commit_sectors.rs  state.rs  storage_provider_registration.rs  submit_windowed_post.rs  terminate_sectors.rs
pallets/storage-provider/src/types/: proofs.rs  sector.rs  storage_provider.rs
parachain/node/: Cargo.toml
primitives/: Cargo.toml
primitives/cli/: Cargo.toml
primitives/cli/src/: error.rs  lib.rs  logger.rs  result.rs
primitives/commitment/: Cargo.toml
primitives/commitment/src/: commd.rs  lib.rs  piece.rs  zero.rs
primitives/proofs/: Cargo.toml
primitives/proofs/src/: lib.rs  randomness.rs  snark.rs  traits.rs  types.rs
primitives/shared/: Cargo.toml
primitives/shared/src/: commcid.rs  lib.rs  piece.rs
primitives/shared/src/commitment/: mod.rs  zero.rs
primitives/src/: lib.rs  pallets.rs  proofs.rs  randomness.rs  sector.rs
primitives/src/commitment/: commd.rs  mod.rs  piece.rs  zero.rs
primitives/src/proofs/: mod.rs  randomness.rs  traits.rs  types.rs
storage-provider/server/: Cargo.toml
storage-provider/server/src/: db.rs  main.rs  rpc.rs  storage.rs
storage-provider/server/src/pipeline/: mod.rs  types.rs
storage-retrieval/: Cargo.toml
storage-retrieval/examples/: simple_retrieval.rs
storage-retrieval/src/: client.rs  lib.rs  server.rs
storage/file-storage/: Cargo.toml  README.md
storage/file-storage/src/: lib.rs  piecestore.rs
storage/file-storage/src/car/: async_car_v1.rs  car_v1.rs  chunker.rs  mod.rs
storage/file-storage/src/piecestore/: mod.rs  rocksdb.rs  types.rs
storage/mater/: BENCHMARK.md  Cargo.toml  README.md
storage/mater-cli/: Cargo.toml  README.md
storage/mater-cli/src/: commp.rs  convert.rs  error.rs  extract.rs  main.rs
storage/mater/benches/: benchmark.rs
storage/mater/src/: async_varint.rs  blockstore.rs  lib.rs  multicodec.rs  utils.rs
storage/polka-index/: Cargo.toml  README.md
storage/polka-index/src/: lib.rs
storagext/cli/: Cargo.toml  README.md
storagext/cli/src/: main.rs
(+276 files in other folders)
